feat: migrate to EC2 deployment from ECS
- Switch from ECS/Fargate to direct EC2 deployment for simpler management
- Add deployment scripts:
  - deploy.sh for initial EC2 setup and Docker installation
  - update.sh for code and environment updates
- Update docker-compose.yml:
  - Remove development-only volume mounts
  - Use built image instead of build context
  - Remove obsolete version field
- Update .gitignore to exclude:
  - *.pem files
  - task-definition files
  - environment files

This change simplifies our deployment process by:
1. Removing AWS IAM dependencies
2. Providing direct server access for debugging
3. Enabling faster updates via simple scripts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,11 @@
 services:
   chatbot:
-    build: .
+    image: chatchipmunk-api:latest
+    ports:
+      - "8000:8000"
+    restart: unless-stopped
+    env_file:
+      - .env
     environment:
       - PINECONE_API_KEY=${PINECONE_API_KEY}
       - LANGCHAIN_API_KEY=${LANGCHAIN_API_KEY}
@@ -9,5 +14,4 @@ services:
       - PINECONE_INDEX=${PINECONE_INDEX}
       - NEXT_PUBLIC_SUPABASE_URL=${NEXT_PUBLIC_SUPABASE_URL}
       - NEXT_PUBLIC_SUPABASE_ANON_KEY=${NEXT_PUBLIC_SUPABASE_ANON_KEY}
-    volumes:
-      - .:/app
+      - PYTHONUNBUFFERED=1
