--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,7 @@ pinecone-plugin-interface==0.0.7
 # pypdf==4.3.1
 python-dotenv==1.0.1
 # PyYAML==6.0.2
+realtime==2.0.0
 # regex==2024.7.24
 # requests==2.32.3
 # sniffio==1.3.1
@@ -57,3 +58,5 @@ supabase==2.11.0
 # typing_extensions==4.12.2
 # urllib3==2.2.2
 # yarl==1.9.7
+fastapi>=0.109.0
+uvicorn[standard]>=0.27.0
