feat: Improve API reliability and security
- Replace Caddy with Nginx for more reliable reverse proxy
- Fix CORS handling to prevent duplicate headers
- Add proper CORS support for both dev and prod environments
- Implement vectorstore auto-update before each query
- Remove channel_id requirement from chat endpoint
- Add support for /fake and /file command prefixes
- Add health check endpoint for monitoring
- Clean up FastAPI CORS middleware to avoid conflicts

This commit improves the overall stability of the chatbot API,
fixes CORS issues with Vercel frontend, and ensures the vectorstore
stays up-to-date with new messages.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 services:
   chatbot:
     image: chatchipmunk-api:latest
-    ports:
-      - "8000:8000"
+    expose:
+      - "8000"
     restart: unless-stopped
     env_file:
       - .env
@@ -15,3 +15,22 @@ services:
       - NEXT_PUBLIC_SUPABASE_URL=${NEXT_PUBLIC_SUPABASE_URL}
       - NEXT_PUBLIC_SUPABASE_ANON_KEY=${NEXT_PUBLIC_SUPABASE_ANON_KEY}
       - PYTHONUNBUFFERED=1
+    networks:
+      - web
+
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./certs:/etc/nginx/certs
+    depends_on:
+      - chatbot
+    networks:
+      - web
+
+networks:
+  web:
+    driver: bridge
